--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "json-server": "json-server --watch db.json --port 5000"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -21,10 +22,14 @@
     "json-server": "^1.0.0-beta.2",
     "lucide-react": "^0.441.0",
     "next": "14.2.12",
+    "next-auth": "^4.24.8",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
-    "tailwind-merge": "^2.5.2"
+    "tailwind-merge": "^2.5.2",
+    "yup": "^1.4.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
